<resources>
    <string name="app_name">ToDoList</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="date">Data</string>
    <string name="hour">Horário</string>
    <string name="createTask">Criar Tarefa</string>
    <string name="cancel">Cancelar</string>
</resources>